# editor

./: CMakeLists.txt  color.h  main.cpp  main_linux.cpp  main_windows.cpp  readme.md
dependencies/: CMakeLists.txt
test/: CMakeLists.txt  integration_tests.cpp  main.cpp
